vuepress/docs/v7.0/tutorials/getting-started/kubernetes-install.md
# Installation on Kubernetes

## Infrastructure Requirements

Below are the minimum infrastructure requirements to install Entando directly on a Kubernetes (K8s) cluster:

- A working DNS server configured to resolve internal and external names. To configure K8s with a global wildcard domain name for the entire cluster, be sure it points to the public IP address of the external load balancer for the worker nodes.
- A default [storage class](https://kubernetes.io/docs/concepts/storage/storage-classes/) is needed for the Entando Operator to create the correct persistent volume claims (PVC) for each pod.
- NGINX [ingress controller](https://kubernetes.github.io/ingress-nginx/deploy/) is needed to expose the Entando Application.
- To install bundles, the cluster containing the Entando Application must have access to the bundle repository (either public or private, often on GitHub) as well as the Docker image repository (e.g. DockerHub) for any microservices.
- Kubernetes Secrets are required to [install bundles from a private image repository](../curate/ecr-private-images.md), such as DockerHub.

## Minimum Hardware Requirements

Minimum hardware requirements depend on how Entando is used. As a general rule, an increase in functionality necessitates additional capabilities and resources.
### Entando Install Only

- 6 vCPU (6000 millicores)
- 6 GB of RAM
- 5 GB of allocated storage distributed over many PVC

Configure a single worker node with the requirements above or designate 3 worker nodes, each with a minimum of 2 PVC and 4 GB of RAM.

### Entando + Microservices

- 500 millicores per microservice, or 
- 1000 millicores per microservice containing a database

The microservices tested with the CPU specs above were generated using the JHipster Entando Blueprint.

### Entando + CMS

Complexity, content and number of pages determine the hardware requirements of an Entando install that includes the CMS. The minimum requirements are:

- 9 vCPU for a single CMS instance. To scale up, allocate 4 vCPU per replica.
- 8 GB of RAM for a single CMS instance. To scale up, allocate 4 GB of RAM per replica.
- A minimum of 50 GB of storage for the static resources generated by the use of the Entando CMS.

## Backup Strategies

It is recommended to secure content via database services that automate backups and restore on a Kubernetes cluster such as Azure, Red Hat OpenShift, Google K8s Service or Amazon Elastic. If this is not an option, content can be managed with tools like [Velero](https://velero.io/) or [Cloudcase](https://cloudcasa.io/). 

> Note: The decision to run databases inside production environment pods is controversial.

 If you are using the Entando CMS, be sure to protect related schemas (`port` and `serv`) with a valid disaster recovery plan. Protect all volumes containing your static resources with daily snapshots.

## References
See the [Entando compatibility guide](https://www.entando.com/page/en/compatibility-guide) for viable Kubernetes versions.